# Running-Calculator

./: .deepsource.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLANNING.md  README.md  Running Calculator.py  SECURITY.md  __init__.py  __main__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  docker-build.yml  docker-image.yml  docker-publish.yml  push-to-pypi.yml  pylint.yml  pytest.yml  python-app.yml  test.yml
docs/: README.md  UNITS.md  USAGE.md
docs/legal/: PRIVACY.md  TERMS.md
tests/: test_main.py
