[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Running-Calculator"
version = "1.5.1"
authors = [
  { name="willtheorangeguy" },
]
description = "A running distance and speed command line interface. Measures in metric and imperial units, as well as marathons and half-marathons."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.urls]
"Homepage" = "https://github.com/willtheorangeguy/Running-Calculator"
"Bug Tracker" = "https://github.com/willtheorangeguy/Running-Calculator/issues"
